objects/OSM_InvoiceLine_And_OrderLine__c.object
<CustomObject>
    <description>This is junction between Invoice Line and Order Line.</description>
    <fields>
        <fullName>CC_Invoice_Item__c</fullName>
        <label>CC Invoice Item</label>
        <referenceTo>ccrz__E_InvoiceItem__c</referenceTo>
        <relationshipLabel>OSM InvoiceLine And OrderLines</relationshipLabel>
        <relationshipName>OSM_InvoiceLine_And_OrderLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_Order_Item__c</fullName>
        <label>CC Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>OSM InvoiceLine And OrderLines</relationshipLabel>
        <relationshipName>OSM_InvoiceLine_And_OrderLines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OSM_Orders_In_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OSM Orders In Invoice</label>
        <referenceTo>OSM_Orders_In_Invoice__c</referenceTo>
        <relationshipLabel>OSM InvoiceLine And OrderLines</relationshipLabel>
        <relationshipName>OSM_InvoiceLine_And_OrderLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Amount__c</fullName>
        <description>This is product price multiple quantity.This does not include tax</description>
        <inlineHelpText>This is product price multiple quantity.This does not include tax</inlineHelpText>
        <label>Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vertex_Tax__c</fullName>
        <label>Vertex Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OSM InvoiceLine And OrderLine</label>
    <nameField>
        <displayFormat>IO-{0000000000}</displayFormat>
        <label>InvoiceLine And OrderLine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OSM InvoiceLine And OrderLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>